--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -5,19 +5,19 @@ layout: page
 {%- assign items = site.data[site.metadata] | where_exp: 'item','item.objectid' -%}
 <div class="row">
 
-  <div class="col-md-8">
+  <div class="col-md-6">
 
     {% include index/description.html %}
     {% include index/carousel.html title="Sample Items" %}
     
   </div>
-  <div class="col-md-4">  
+  <div class="col-md-6">  
 
     {% include index/time.html %}
 
-    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="primary" %}
+    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="success" %}
 
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-secondary" %}
+    {% include index/featured-terms.html field="location" title="Locations" btn-color="success" %}
     
     {% include index/objects.html %}
 
